# polygot-mono-repo

./: .gitignore  BUILD  README.md  WORKSPACE  bazelisk.py
go-service-a/: BUILD.bazel  Server.go  Server_test.go
go-service-a/controllers/: BUILD.bazel  Hello.go  Hello_test.go
service-a/: BUILD
service-a/src/main/java/com/smicha/sa/: App.java  BUILD
service-a/src/test/java/com/smicha/sa/: AppTest.java  BUILD
service-a/src/test/java/com/smicha/sa/subpackage/: AnotherSubTest.java  BUILD  SubTest.java
service-b/: BUILD
service-b/src/main/java/com/smicha/sb/: App.java  BUILD
service-b/src/test/java/com/smicha/sb/: AppTest.java  BUILD
service-c/: BUILD
service-c/src/main/java/com/smicha/sc/: App.java  BUILD
service-c/src/test/java/com/smicha/sc/: AppTest.java  BUILD
shared/library-a/: BUILD
shared/library-a/src/main/java/com/smicha/shared/la/: Something.java
shared/library-a/src/test/java/com/smicha/shared/la/: SomethingTest.java
shared/library-b/: BUILD
shared/library-b/src/main/java/com/smicha/shared/lb/: Something.java
shared/library-b/src/test/java/com/smicha/shared/lb/: SomethingTest.java
shared/proto/: BUILD  BUILD.bazel  hello.proto
shared/proto/di/: BUILD.bazel  di.proto
shared/proto/payment/: BUILD.bazel  payment.proto
