load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go-service-a_lib",
    srcs = ["Server.go"],
    importpath = "github.com/sajeeve-michaelswamy-tm/polygot-mono-repo/go-service-a",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go-service-a",
    embed = [":go-service-a_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go-service-a_test",
    srcs = ["Server_test.go"],
    embed = [":go-service-a_lib"],
)
