load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "hello_proto",
    srcs = ["hello.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "hello_go_proto",
    importpath = "github.com/sajeeve-michaelswamy-tm/polygot-mono-repo/shared/proto/hello",
    proto = ":hello_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "hello",
    embed = [":hello_go_proto"],
    importpath = "github.com/sajeeve-michaelswamy-tm/polygot-mono-repo/shared/proto/hello",
    visibility = ["//visibility:public"],
)
