load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "payment_proto",
    srcs = ["payment.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "payment_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/sajeeve-michaelswamy-tm/polygot-mono-repo/shared/proto/payment/payment",
    proto = ":payment_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "payment",
    embed = [":payment_go_proto"],
    importpath = "github.com/sajeeve-michaelswamy-tm/polygot-mono-repo/shared/proto/payment/payment",
    visibility = ["//visibility:public"],
)
